--- a/.example.env
+++ b/.example.env
@@ -1,4 +1,11 @@
-DATABASE_URL=YOUR_DB_USERNAME:YOUR_DB_PASSWORD@tcp(YOUR_DB_IP:{YOUR_DB_PORT})/dbcrowdfunding?charset=utf8mb4&parseTime=True&loc=Local
-JWT_SECRET_KEY=
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
+DB_NAME=
+DB_CHARSET=
+DB_PARSE_TIME=
+DB_LOC=
 SERVER_KEY=
 CLIENT_KEY=
+JWT_SECRET_KEY=
